package gameLaby.laby;

public interface Intelligence {
    String NULLE="nulle";
    String FAIBLE="faible";
    String MOYENNE="moyenne";
    String INTELLIGENT="intelligent";
    String[] intelligence={INTELLIGENT,FAIBLE,MOYENNE,NULLE};
}
